:bug: Bug: Disables vertical-align in .demographic-container. Fixes #150.

--- a/public/main.css
+++ b/public/main.css
@@ -791,7 +791,7 @@ a {
 .demographic-container {
   width: 48%;
   display: inline-block;
-  vertical-align: top;
+  /*vertical-align: top;*/
   text-align: center;
   margin-top: 2em;
 }
